--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- We can specify style (CSS) with the style tag -->
     <style>
     body {
-      background: #ccc;
+      background: rgb(69, 25, 172);
       text-align: center;
     }
     h1 {
